--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do site</title>
+    <title>Curso Gratís</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Curso de HTML5 com CSS3</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat cupiditate, ad fugiat quae nostrum, deleniti magni ab sint similique quasi asperiores quas iusto doloremque. Numquam maiores vel cum similique nam!</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
